Fix overlap with register button

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -129,9 +129,9 @@
               margin: 0 2%;
               position: relative;
               color: red;
-              border: 2px solid white;
+              border: 1px solid white;
               border-radius: 5px;
-              padding: 1%;
+              padding: 0.5rem;
               transition: color .5s;
               font-size: 1em;
               &:hover {
